--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules
-vendor
+/vendor
 storage/*.key
 public/*
 !public/favicon.svg
@@ -8,7 +8,7 @@ public/*
 !public/robots.txt
 **.log
 **.pid
-data
+/data
 .env
 .phpunit.result.cache
 .idea
