Update docker workflow

--- a/.github/workflows/fixes.yml
+++ b/.github/workflows/fixes.yml
@@ -1,4 +1,4 @@
-name: Code Quality and Style Fixes
+name: Code Quality & Style Fixes
 on:
   - push
 
@@ -15,14 +15,17 @@ jobs:
         run: |
           composer install --prefer-dist --no-progress --no-suggest
           php artisan insights -n --ansi --format=github-action --fix
+
       - name: Code Style Fixes
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
           args: --allow-risky=yes
+
       - name: Get branch
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: current_branch
+
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v2.3.0
         with:
