--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,13 +1,12 @@
 name: Docker Build
 
 on:
+  pull_request:
+    branches: master
   push:
-    branches:
-      - master
+    branches: master
     tags:
       - v*
-  pull_request:
-
 jobs:
   test:
     runs-on: ubuntu-latest
