Add branch targets to workflows

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,9 +2,11 @@ name: Docker Build
 
 on:
   pull_request:
-    branches: master
+    branches:
+      - master
   push:
-    branches: master
+    branches:
+      - master
     tags:
       - v*
 jobs:
