--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,50 +1,54 @@
 name: Tests
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   tests:
     runs-on: ubuntu-latest
     steps:
-    - uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.0'
-    - uses: actions/checkout@v2
-    - name: Copy .env
+      - uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.0'
+      - uses: actions/checkout@v2
+      - name: Copy .env
 
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Composer Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      - name: Install Composer Dependencies
+        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-    - name: Install NPM Dependencies
-      run: |
-        npm install -quiet
-        npm run prod -quiet
+      - name: Install NPM Dependencies
+        run: |
+          npm install -quiet
+          npm run prod -quiet
 
-    - name: Generate key
-      run: php artisan key:generate
+      - name: Generate key
+        run: php artisan key:generate
 
-    - name: Set Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+      - name: Set Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
 
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
+      - name: Create Database
+        run: |
+          mkdir -p database
+          touch database/database.sqlite
 
-    - name: Run Code Quality Tests
-      run: php artisan insights
+      - name: Run Code Quality Tests
+        run: php artisan insights
 
-    - name: Run Unit and Feature tests via PHPUnit
-      env:
-        LOG_CHANNEL: single
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      - name: Run Unit and Feature tests via PHPUnit
+        env:
+          LOG_CHANNEL: single
+          DB_CONNECTION: sqlite
+          DB_DATABASE: database/database.sqlite
+        run: vendor/bin/phpunit
 
-    - uses: actions/upload-artifact@v2
-      if: failure()
-      with:
-       name: laravel-failure-artifact
-       path: storage/logs/laravel.log
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: laravel-failure-artifact
+          path: storage/logs/laravel.log
