Add Docker Publish (#2)
* Update docker workflow

* Update `on`

* Replace ghPackages by dockerx

* Fix tpyo

* Fix

* Add branch targets to workflows

* fix docker workflow

* Remov -j option on Dockerfile

* change workflow names

--- a/.github/workflows/fixes.yml
+++ b/.github/workflows/fixes.yml
@@ -1,6 +1,8 @@
-name: Code Quality and Style Fixes
+name: Code Quality & Style Fixes
 on:
-  - push
+  push:
+    branches:
+     - master
 
 jobs:
   fixes:
@@ -15,14 +17,17 @@ jobs:
         run: |
           composer install --prefer-dist --no-progress --no-suggest
           php artisan insights -n --ansi --format=github-action --fix
+
       - name: Code Style Fixes
         uses: docker://oskarstark/php-cs-fixer-ga
         with:
           args: --allow-risky=yes
+
       - name: Get branch
         shell: bash
         run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: current_branch
+
       - name: Commit changes
         uses: stefanzweifel/git-auto-commit-action@v2.3.0
         with:
