--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,12 +1,49 @@
 name: Docker Build
-on:
-  - push
-  - pull_request
 
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
+    tags:
+      - v*
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build -t creators_stack:$(date +%s) -f docker/prod/Dockerfile .
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: docker build . --file docker/prod/Dockerfile
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Prepare
+        id: prepare
+        run: |
+          VERSION=latest
+
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/v}
+          fi
+
+      - name: Set up Docker Buildx
+        uses: crazy-max/ghaction-docker-buildx@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Publish
+        id: buildx
+        run: |
+          docker buildx build \
+            --push
+            --tag creatorsstack/creatorsstack:${{ steps.prepare.outputs.version }} \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 .
