--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Prepare
         id: prepare
         run: |
@@ -31,19 +33,23 @@ jobs:
             VERSION=${GITHUB_REF#refs/tags/v}
           fi
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Publish
-        id: buildx
-        run: |
-          docker buildx build \
-            --push
-            --tag creatorsstack/creatorsstack:${{ steps.prepare.outputs.version }} \
-            --platform linux/amd64,linux/arm/v7,linux/arm64 .
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: .
+          file: prod/docker/Dockerfile
+          tags: creatorsstack/creatorsstack:${{ steps.prepare.outputs.version }}
+          platforms: linux/amd64,linux/arm64
