--- a/docker/prod/nginx.conf
+++ b/docker/prod/nginx.conf
@@ -9,6 +9,7 @@ server {
     index index.php;
 
     charset utf-8;
+    client_max_body_size 10M;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
